# flir_gige

./: CMakeLists.txt  package.xml
config/: params.yml
include/calib_proc/: calib_proc_node.hpp
include/camera_base/: camera_node_base.h  camera_node_base.hpp  camera_ros_base.h  camera_ros_base.hpp
include/flir_gige/: FlirGigeDynConfig.h  FlirGigeDynConfig.hpp  ThermalProcDynConfig.h  flir_gige.h  flir_gige.hpp  flir_gige_node.h  flir_gige_node.hpp  flir_gige_ros.h  flir_gige_ros.hpp
include/thermal_proc/: thermal_proc_node.hpp
src/calib_proc/: calib_proc_main.cpp  calib_proc_node.cpp
src/flir_gige/: flir_gige.cpp  flir_gige_main.cpp  flir_gige_node.cpp  flir_gige_nodelet.cpp  flir_gige_ros.cpp
src/thermal_proc/: thermal_proc_main.cpp  thermal_proc_nodelet.cpp
