<?xml version="1.0"?>
<package format="3">
  <name>flir_gige</name>
  <version>0.0.1</version>
  <description>The flir_gige package</description>

  <maintainer email="quchao@seas.upenn.edu">Chao Qu</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>builtin_interfaces</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>camera_base</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>camera_base</exec_depend>

  <build_depend>camera_info_manager</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>image_transport</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>